# AD_EYE

./: .gitattributes  CMakeLists.txt  PID_controller.cpp  README.md  adeyetb0.launch  gnuradio_server.py  package.xml  robot_node.h  rx_demo.sh  trans_demo.sh  wifi_rx (bladerf).grc  wifi_transceiver _BladeRF.grc  wifi_tx _bladerf.grc
Platooning and simulation/Gazebo simulation launch files/: robots.launch
Platooning and simulation/Platooning algorithm scripts physical/: Controller2.py
Platooning and simulation/Platooning algorithm scripts simulation/: ControllerT2.py
Platooning and simulation/Platooning control scripts physical/: Controller2.py
Platooning and simulation/Platooning control scripts simulation/: ControllerT1.py  ControllerT2.py
Platooning/launch/: multi_turtlebot3.launch
Platooning/scripts/: controller_phy.py  controller_sim_T1.py  controller_sim_T2.py
Platooning/src/: robot_class.py
darknet_ros/: LICENSE  README.md  jenkins-pipeline
darknet_ros/darknet/: .gitignore  LICENSE.fuck  LICENSE.gen  LICENSE.mit  LICENSE.v1  Makefile  README.md  bad.list
darknet_ros/darknet/devel/: .catkin  setup.sh
darknet_ros/darknet/examples/: detector-scipy-opencv.py  detector.py
darknet_ros/darknet/python/: darknet.py  proverbot.py
darknet_ros/darknet/scripts/: get_coco_dataset.sh  imagenet_label.sh
darknet_ros/darknet/src/: activation_kernels.cu  avgpool_layer_kernels.cu  blas_kernels.cu  col2im_kernels.cu  convolutional_kernels.cu  crop_layer_kernels.cu  deconvolutional_kernels.cu  dropout_layer_kernels.cu  im2col_kernels.cu  image.c  image_opencv.cpp  maxpool_layer_kernels.cu
darknet_ros/darknet_ros/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml
darknet_ros/darknet_ros/config/: ros.yaml  tb3_0ros.yaml  tb3_1ros.yaml  yolov2-tiny-voc.yaml  yolov2-tiny.yaml  yolov2-voc.yaml  yolov2.yaml  yolov3-voc.yaml  yolov3.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch  darknet_ros_gdb.launch  darknet_ros_nodelet.launch  darknet_ros_valgrind.launch  yolo_v3.launch
darknet_ros/darknet_ros_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
include/: controller_algorithm.h  robot_node.h
launch/: launch_single.launch
object_detection/: CMakeLists.txt  README.md  package.xml
object_detection/launch/: object_detection.launch  object_detection_main.launch
object_detection/msg/: Coordinates.msg  objectcoord.msg  objectpixels.msg
object_detection/rviz_config/: navigation.rviz
object_detection/scripts/: detection_tag_frame.py  global_detection_coordinates.py  marker_coordinates.py  marker_prescan.py  relative_detection_coordinates.py
object_detection/slam-maps/: bestmap.pgm  bestmap.yaml  map_11_24.pgm  map_11_25.pgm  map_11_26.pgm  map_12_03.pgm  new_map.pgm  new_map.yaml  newmap.pgm  newmap.yaml  testmap.pgm  testmap.yaml
platooning/: CMakeLists.txt  README.md  package.xml
platooning/GazeboMapADEYE/: model.config  model.sdf
platooning/config/: amcl_parameters.yaml  sensor_filter.yaml  sensor_filter0.yaml  sensor_filter1.yaml  sensor_filter2.yaml  sensor_filter3.yaml  sensor_filter4.yaml
platooning/includes/: description.launch.xml
platooning/launch/: amc_turtlebot.launch  amcl.launch  amcl_tb3_0.launch  amcl_tb3_00.launch  amcl_tb3_1.launch  amcl_tb3_2.launch  amcl_tb3_test.launch  amcl_turtlebot.launch  control.launch  multi_robot.launch  multi_turtlebot3.launch  one_robot.launch  robot0_launch.launch  robot1_launch.launch  rviz.launch  sensor_filter.launch  sensor_filter0.launch  sensor_filter1.launch  sensor_filter2.launch  sensor_filtertb3_0.launch  sensor_filtertb3_1.launch  sensor_filtertb3_2.launch  single_robot.launch  single_robot0.launch  single_robot1.launch  single_robot2.launch  single_robotNNspace.launch  single_robotPrescan.launch  test_single.launch  testlaunch.launch
platooning/launch/old launches/: main.launch
platooning/maps/: map3.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml
platooning/models/rviz/: model.rviz  navigation.rviz
platooning/models/urdf/: turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi0.gazebo.xacro  turtlebot3_waffle_pi0.urdf.xacro  turtlebot3_waffle_pi_t3b_0.urdf.xacro  turtlebot3_waffle_pi_t3b_1.urdf .xacro  turtlebot3_waffle_pi_t3b_2.urdf  .xacro  turtlebot3_waffle_pi_tb3_0.urdf.xacro  turtlebot3_waffle_pi_tb3_1.urdf.xacro  turtlebot3_waffle_pi_tb3_2.urdf.xacro
platooning/rviz_config/: navigation.rviz
platooning/scripts/: PIDClass.py  PlannerClass.py  RobotClass.py  SamplingTime.py  WaypointClass.py  controller_sim_T1.py  controller_sim_T2.py  gnuradio_client.py  libraries.py  physical_node.py  physical_node0.py  robot_class.py  robot_class0.py
platooning/slam-maps/: BIGmap.pgm  BIGmap.yaml  FINAL_MAP.pgm  FINAL_MAP.yaml  NEW_MAP2.pgm  NEW_MAP2.yaml  map.pgm  map.yaml  map2.pgm  map2.yaml  map3.pgm  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map6.yaml  map7.yaml  map8.pgm  map8.yaml  params.yaml  testmap.pgm  testmap.yaml
platooning/src/: robot_class.py
platooning/worlds/: HKworld.world
src/: robot_node.cpp
system_identification/: CMakeLists.txt  README.md  package.xml
system_identification/scripts/: IdentifyClass.py  angular_results.txt  libraries.py  linear_results.txt  main.py
(+16 files in other folders)
